--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <ul>
 	   <li><a href="dashboard.html">Ver Fotos</a></li>
 	   <li><a href="login.html">Volver al login</a></li>
+       <li><a href="https://github.com/Mikel481/blog-privado">github</a></li>
         </ul>
     </div>
     <!-- fin bloq_der -->
