--- a/login.html
+++ b/login.html
@@ -12,11 +12,11 @@
         <form action="verif.html" method="get">
             <div class="input-group">
                 <label for="Usuario">Usuario</label>
-                <input type="email" id="Usuario" name="Usuario" required>
+                <input type="text" id="Usuario" name="Usuario" required>
             </div>
             <div class="input-group">
-                <label for="password">Contraseña</label>
-                <input type="password" id="Contrasena" name="Contrasena" required>
+                <label for="Contraseña">Contraseña</label>
+                <input type="password" id="Contraseña" name="Contrasena" required>
                 <div class="checkbox">
                     <label><input type="checkbox" id="checkbox1" required />Acepto las <a
                             href="terminos.html" class="condic" >Condiciones</a></label>
