--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-container">
         <h1>Login</h1>
-        <form action="verif.html" method="get">
+        <form action="auth.html" method="get">
             <div class="input-group">
                 <label for="Usuario">Usuario</label>
                 <input type="text" id="Usuario" name="Usuario" required>
